@@ -42,6 +42,7 @@ Cacti CHANGELOG
 -issue#1658: Devices drop down should be filtered by Site
 -issue#1660: Reports based upon Tree don't maintain graph order
 -issue#1674: Threads and Processes values not migrated to Poller table during upgrade
+-issue#1700: Mail sent without auth causes errors to appear in logs
 -issue: Move Graph removal function to Graph API
 -issue: Fix issue with display_custom_error_message() causing problem with system error message handling
 -issue: Graph List View was not fully responsive
@@ -51,6 +52,7 @@ Cacti CHANGELOG
 -feature#973: Obtain users email and full name from ldap 
 -feature#1347: Update automation logging to work better
 -feature#1142: Add Site dropdown to the Graphs and Data Source pages
+-feature#1282: Email notification for Automation Network discovery process
 -feature#1395: Ensure messages have each new line keep the same prefix in cacti_log()
 -feature#1399: Allow 'requires' to include version against a plugin
 -feature#1400: User settings should have checkbox to enable overriding of global settings
